--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "supertest": "^7.0.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "prisma-dbml-generator": "^0.12.0"
   }
 }
